@@ -60,6 +60,8 @@
 >   - Low number of AI units and radio tower destroyed (2)<br/>
 #### **d_mt_respawngroups / Respawn main target enemy AI groups as reinforcements:**
 > Default: 0 (Yes, enabled; 1 or No to disable it)<br/>
+#### **d_ai_persistent_corpses / Persistent AI corpses**
+> Default: 1 (No, disabled; 0 or Yes to enable it)<br/>
 #### **d_weather / Internal weather system:**
 > Default: 0 (Yes, enabled; 1 or No to disable it)<br/>
 #### **d_enable_fog / Enable fog (internal weather system):**
