@@ -25,9 +25,12 @@ private _garrisonUnits = {
 		_sniperGrpName = format["Sniper%1", floor(random 999999)];
 		_newgroup setGroupId [_sniperGrpName];
 	};
-	
+
+#ifndef __TT__
+	private _units_to_garrison = [_trg_center, _unitlist, _newgroup, false, true, -1, d_side_player, "MAIN"] call d_fnc_makemgroup;
+#else
 	private _units_to_garrison = [_trg_center, _unitlist, _newgroup, false, true] call d_fnc_makemgroup;
-	
+#endif	
 	if (_unitMovementMode == 2) then {
 		{
 			_x disableAI "PATH";
@@ -409,7 +412,11 @@ if (d_no_more_observers < 2) then {
 		private _xpos = _wp_array_inf select _xx_ran;
 		_wp_array_inf deleteAt _xx_ran;
 		__TRACE("from createmaintarget 1")
+#ifndef __TT__
+		private _observer = ([_xpos, _unit_array, _agrp, true, false, -1, d_side_player, "MAIN"] call d_fnc_makemgroup) # 0;
+#else
 		private _observer = ([_xpos, _unit_array, _agrp, true, false] call d_fnc_makemgroup) # 0;
+#endif
 		_agrp deleteGroupWhenEmpty true;
 		[_agrp, _xpos, [_trg_center, _radius], [5, 20, 40], "", 0] spawn d_fnc_MakePatrolWPX;
 		_agrp setVariable ["d_PATR", true];
