@@ -51,7 +51,11 @@ if (_numvecs > 0) then {
 	_msize = 2;
 } else {
 	__TRACE("from makegroup")
+#ifndef __TT__
+	_uinf = [_pos, [_grptype, _side] call d_fnc_getunitlistm, _grp, _mchelper, true, -1, d_side_player, "MAIN"] call d_fnc_makemgroup;
+#else
 	_uinf = [_pos, [_grptype, _side] call d_fnc_getunitlistm, _grp, _mchelper, true] call d_fnc_makemgroup;
+#endif
 	__TRACE_1("","_uinf")
 };
 
